PyMaker/datas/object2/RawHTML/i13101/Python_DOC_referPages.cannot-import-file-because-of-file-name.txt
<div class="post-text" itemprop="text">
<p>I need to import a python file from another folder. To do that I am using the following lines of code </p>
<pre><code>import sys
sys.path.insert(0, '/home/mininet/Sandbox/mapper')
from parser import read-dir
</code></pre>
<p>I get a syntax error because my python file name has a "-" character</p>
<pre><code>from parser import read-dir
                       ^
SyntaxError: invalid syntax
</code></pre>
<p>Is there any way to get around it?</p>
</div>
<div class="post-text" itemprop="text">
<p>Because your file has <code>-</code> character in file name. Instead of <code>import</code>, use <a href="https://docs.python.org/3/library/functions.html#__import__" rel="nofollow"><code>__import__</code></a> or <a href="https://docs.python.org/3/library/importlib.html" rel="nofollow"><code>importlib</code></a>.</p>
<p>For example, I have a script called <code>h-e-l-l-o.py</code>:</p>
<pre><code>&gt;&gt;&gt; import h-e-l-l-o
  File "&lt;input&gt;", line 1
    import h-e-l-l-o
            ^
SyntaxError: invalid syntax


&gt;&gt;&gt; import importlib
&gt;&gt;&gt; importlib.import_module('h-e-l-l-o')
&lt;module 'h-e-l-l-o' from '/home/kevin/h-e-l-l-o.py'&gt;


&gt;&gt;&gt; __import__('h-e-l-l-o')
&lt;module 'h-e-l-l-o' from '/home/kevin/h-e-l-l-o.py'&gt;
&gt;&gt;&gt; 
</code></pre>
</div>
<span class="comment-copy">Refer <a href="http://stackoverflow.com/questions/67631/how-to-import-a-module-given-the-full-path" title="how to import a module given the full path">stackoverflow.com/questions/67631/…</a></span>
<span class="comment-copy">Can you rename the file? <code>read-dir</code> isn't a valid variable name (it's a subtraction expression), but <code>read_dir</code> would be.</span>
